--- a/rust_2025/Cargo.toml
+++ b/rust_2025/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+aoc_utils = { path = "../aoc_utils" }
 anyhow = "1.0.100"
 itertools = "0.14.0"
